--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -152,12 +152,16 @@ body {
 
 .content_wrap {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     z-index: 100;
     max-width: 1440px;
     width: 100%;
-    height: 100dvh;
+    height: 13dvh;
     margin: 0 auto;
+
+    @include media ("<phone") {
+        height: 7dvh;
+    }
 }
